src/objects/LegalSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is Market Specific.</description>
    <fields>
        <fullName>Call_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Markets can decide if its legal to call campaign or not.</description>
        <label>Call Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoubleOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoubleOptIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketCode__c</fullName>
        <description>Holds market code.</description>
        <label>MarketCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LegalSettings</label>
</CustomObject>